--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ authors = [
     {name = "Piotr Opała", email = "opalapj@gmail.com"},
 ]
 license = {text = "MIT"}
-dependencies = []
+dependencies = ["psutil>=7.1.3", "appopener>=1.7", "winapps>=0.2.0"]
 requires-python = "==3.13.*"
 
 [tool.pdm]
